# autofinako

./: .gitignore  CLAUDE.md  Makefile  program.md  pyproject.toml
.github/workflows/: autoresearch.yml  ci.yml
configs/: global_params.yaml
dashboard/: app.py
data/fixtures/: generate_fixtures.py  sample_earnings.csv  sample_experiments.tsv
docs/: GENERALISATION_PLAN.md  MIGRATION_LOG.md  PARAMS_CANDIDATES.md  SOURCE_AUDIT.md
notebooks/exploration/: test_stages_1_2.ipynb
src/pipeline/: evaluate.py  experiment.py  experiment_log.py  llm.py  settings.py
src/pipeline/features/: __init__.py  cross_sectional.py  enhanced_scoring_features.py  temporal.py
src/pipeline/ingest/: __init__.py  transcript.py
src/pipeline/modeling/: __init__.py  arimax.py  expanding_cv.py  granger.py
src/pipeline/scoring/: __init__.py  chunker.py  constants.py  enhanced_pipeline.py  enhanced_prompts.py  enhanced_schemas.py  llm_pipeline.py  lm_pipeline.py  neutering.py  prompts.py  schemas.py  score_computer.py
tests/integration/: test_autoresearch_loop.py  test_pipeline_e2e.py
tests/unit/: test_enhanced_scoring.py  test_evaluate.py  test_experiment.py  test_features.py  test_scoring.py  test_settings.py  test_ts_models.py
