[project]
name = "autofinako"
version = "0.1.0"
description = "Configurable earnings prediction research platform with autonomous experiment loop"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "click>=8.3.1",
    "httpx>=0.28.1",
    "openai>=2.30.0",
    "pandas>=3.0.1",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.56.0",
    "typer>=0.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]

[dependency-groups]
dev = [
    "hypothesis>=6.151.10",
    "ipykernel>=7.2.0",
    "mypy>=1.19.1",
    "nbconvert>=7.17.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/pipeline/scoring/prompts.py" = ["E501"]
"src/pipeline/scoring/enhanced_prompts.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = [".venv"]

[[tool.mypy.overrides]]
module = [
    "pandas", "pandas.*",
    "sklearn", "sklearn.*",
    "scipy", "scipy.*",
    "yaml", "yaml.*",
    "spacy", "spacy.*",
    "snowflake", "snowflake.*",
    "nuvolos", "nuvolos.*",
]
ignore_missing_imports = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["statsmodels", "statsmodels.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.coverage.run]
omit = [
    "src/pipeline/ingest/transcript.py",  # requires Snowflake connection
    "src/pipeline/features/enhanced_scoring_features.py",  # pass-through; requires full enhanced output
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
